syntax = "proto3";

package user;

message User {
  int32 id = 1;
  string nom = 2;
  string prenoms = 3;
  string email = 4;
  string password = 5;
  string role = 6;
}

service UserService {
  rpc FindUser(FindUserRequest) returns (User);
}

message FindUserRequest {
  int32 id = 1;
}
